--- a/attention_model/preprocess.ipynb
+++ b/attention_model/preprocess.ipynb
@@ -93,6 +93,7 @@
    "outputs": [],
    "source": [
     "#get question id and voting score for all answer posts\n",
+    "#questins: list((answer_post_score, answer_post_id))\n",
     "questions = defaultdict(list)\n",
     "for post_id, parent_id, score in conn.cursor().execute('select id, parent_id, score from post where parent_id is not null').fetchall():\n",
     "    questions[parent_id].append((score, post_id))\n",
@@ -114,6 +115,45 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22676,\n",
+       " {u'context': [{u'characterRanges': u'[{\"characterRange\":{\"start\":29,\"end\":42},\"backward\":true}]',\n",
+       "    u'html': u'\\n\\n<pre><code>import urllib</code></pre>',\n",
+       "    u'pos': [{u'end': 178, u'source': u'answer-22776', u'start': 152}],\n",
+       "    u'target': u'answer-22776'}],\n",
+       "  u'id': 2,\n",
+       "  u'intent': u'download a file \"http://www.example.com/songs/mp3.mp3\" over HTTP and save to \"mp3.mp3\"',\n",
+       "  u'notSure': False,\n",
+       "  u'question': [{u'characterRanges': u'[{\"characterRange\":{\"start\":9,\"end\":34},\"backward\":false}]',\n",
+       "    u'html': u'download a file over HTTP',\n",
+       "    u'pos': [{u'end': 34, u'source': u'title-22676', u'start': 9}],\n",
+       "    u'target': u'title-22676'}],\n",
+       "  u'read_only': True,\n",
+       "  u'snippet': [{u'characterRanges': u'[{\"characterRange\":{\"start\":43,\"end\":113},\"backward\":false}]',\n",
+       "    u'html': u'urllib.urlretrieve (\"http://www.example.com/songs/mp3.mp3\", \"mp3.mp3\")',\n",
+       "    u'pos': [{u'end': 249, u'source': u'answer-22776', u'start': 179}],\n",
+       "    u'target': u'answer-22776'}],\n",
+       "  u'title': u'2017/04/09 18:29:34',\n",
+       "  u'user_id': 2,\n",
+       "  u'username': u'neubig'})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annotations[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -140,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -194,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -214,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -242,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -257,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -275,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -287,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -300,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -316,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +459,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +508,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'context_ref': u'import urllib2\\n\\nurl = \"http://download.thinkbroadband.com/10MB.zip\"\\n\\nfile_name = url.split(\\'/\\')[-1]\\n',\n",
+       " 'context_text': {u'import urllib\\nurllib.urlretrieve (\"http://www.example.com/songs/mp3.mp3\", \"mp3.mp3\")\\n',\n",
+       "  u'import urllib2\\n\\nurl = \"http://download.thinkbroadband.com/10MB.zip\"\\n\\nfile_name = url.split(\\'/\\')[-1]\\nu = urllib2.urlopen(url)\\nf = open(file_name, \\'wb\\')\\nmeta = u.info()\\nfile_size = int(meta.getheaders(\"Content-Length\")[0])\\nprint \"Downloading: %s Bytes: %s\" % (file_name, file_size)\\n\\nfile_size_dl = 0\\nblock_sz = 8192\\nwhile True:\\n    buffer = u.read(block_sz)\\n    if not buffer:\\n        break\\n\\n    file_size_dl += len(buffer)\\n    f.write(buffer)\\n    status = r\"%10d  [%3.2f%%]\" % (file_size_dl, file_size_dl * 100. / file_size)\\n    status = status + chr(8)*(len(status)+1)\\n    print status,\\n\\nf.close()\\n'},\n",
+       " 'intent_ref': u' download a file over HTTP ',\n",
+       " 'intent_text': {u'How do I download a file over HTTP using Python?'},\n",
+       " 'post_id': 22676,\n",
+       " 'snippet_ref': u'\\nu = urllib2.urlopen(url)\\nf = open(file_name, \\'wb\\')\\nmeta = u.info()\\nfile_size = int(meta.getheaders(\"Content-Length\")[0])\\nprint \"Downloading: %s Bytes: %s\" % (file_name, file_size)\\n\\nfile_size_dl = 0\\nblock_sz = 8192\\nwhile True:\\n    buffer = u.read(block_sz)\\n    if not buffer:\\n        break\\n\\n    file_size_dl += len(buffer)\\n    f.write(buffer)\\n    status = r\"%10d  [%3.2f%%]\" % (file_size_dl, file_size_dl * 100. / file_size)\\n    status = status + chr(8)*(len(status)+1)\\n    print status,\\n\\nf.close()\\n',\n",
+       " 'snippet_text': {u'import urllib\\nurllib.urlretrieve (\"http://www.example.com/songs/mp3.mp3\", \"mp3.mp3\")\\n',\n",
+       "  u'import urllib2\\n\\nurl = \"http://download.thinkbroadband.com/10MB.zip\"\\n\\nfile_name = url.split(\\'/\\')[-1]\\nu = urllib2.urlopen(url)\\nf = open(file_name, \\'wb\\')\\nmeta = u.info()\\nfile_size = int(meta.getheaders(\"Content-Length\")[0])\\nprint \"Downloading: %s Bytes: %s\" % (file_name, file_size)\\n\\nfile_size_dl = 0\\nblock_sz = 8192\\nwhile True:\\n    buffer = u.read(block_sz)\\n    if not buffer:\\n        break\\n\\n    file_size_dl += len(buffer)\\n    f.write(buffer)\\n    status = r\"%10d  [%3.2f%%]\" % (file_size_dl, file_size_dl * 100. / file_size)\\n    status = status + chr(8)*(len(status)+1)\\n    print status,\\n\\nf.close()\\n'}}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_annotations[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -488,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -505,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -524,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -542,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -562,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -583,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -614,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -630,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -661,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -776,8 +844,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1287,6 +1357,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'intent': u'Does Python have a string contains substring method?',\n",
+       " 'snippet': {\"if ('blah' not in somestring):\\n    continue\",\n",
+       "  's = \\'This be a string\\'\\nif (s.find(\\'is\\') == (-1)):\\n    print \"No \\'is\\' here!\"\\nelse:\\n    print \"Found \\'is\\' in the string.\"'}}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_questions[final_questions.keys()[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -1311,7 +1403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.8"
   }
  },
  "nbformat": 4,
